--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <!--Sale Image-->
     <div class="sale-image">
-        <img src="./sale.jpg" alt="Sale Image">
+        <img src="sale.jpg" alt="Sale Image">
     </div>
     <!--Recommended-->
     <div class="recommended">
@@ -56,7 +56,7 @@
         <div class="recommended__container">
 
             <div class="course-card">
-                <img src="./c1.jpg" alt="image">
+                <img src="c1.jpg" alt="image">
                 <h3>2023 Python Data Visualitation Masterclass</h3>
                 <p> Col Steele</p>
                 <p>4.9★ ★ ★ ★ ★</p>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./c2.jpg" alt="image">
+                <img src="c2.jpg" alt="image">
                 <h3>Web Development bootcamp 2023</h3>
                 <p> Col Steele</p>
                 <p>3.9★ ★ ★ ★ </p>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./c3.jpg" alt="image">
+                <img src="c3.jpg" alt="image">
                 <h3>Master UI/UX designing with Figma</h3>
                 <p> Col Steele</p>
                 <p>3★ ★ ★ </p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./c4.jpg" alt="image">
+                <img src="c4.jpg" alt="image">
                 <h3>Basic to Advance programming with EMC</h3>
                 <p> Col Steele</p>
                 <p>4.9★ ★ ★ ★ ★</p>
@@ -111,7 +111,7 @@
         <p class="popular__subtitle">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src="./d1.jpg" alt="image">
+                <img src="d1.jpg" alt="image">
                 <h3>Complete MongoDB Course</h3>
                 <p>Malvik vaghadia</p>
                 <p>4.9★ ★ ★ ★ ★</p>
@@ -119,7 +119,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d2.jpg" alt="image">
+                <img src="d2.jpg" alt="image">
                 <h3>Flutter & Dart-The complete Guide[2025 Edition]</h3>
                 <p>Academind by Maximilian</p>
                 <p>3.9★ ★ ★ ★ </p>
@@ -127,7 +127,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./c1.jpg" alt="image">
+                <img src="c1.jpg" alt="image">
                 <h3>Understanding node.JS: Core Concepts</h3>
                 <p>Joseph heidari</p>
                 <p>3.0★ ★ ★ ★ </p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d4.jpg" alt="image">
+                <img src="d4.jpg" alt="image">
                 <h3>Android App Development with kotlin</h3>
                 <p>Oak Academy</p>
                 <p>4.9★ ★ ★ ★ ★</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d5.jpg" alt="image">
+                <img src="d5.jpg" alt="image">
                 <h3>Unit testing Swift Mobile App</h3>
                 <p>Sergey Kargopolov</p>
                 <p>4.0★ ★ ★ ★ </p>
@@ -151,7 +151,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d6.jpg" alt="image">
+                <img src="d6.jpg" alt="image">
                 <h3>API & Web service Introduction</h3>
                 <p> Nate  Ross</p>
                 <p>3.9★ ★ ★ ★ </p>
@@ -159,7 +159,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d7.jpg" alt="image">
+                <img src="d7.jpg" alt="image">
                 <h3>react Native: Advanced Concepts</h3>
                 <p>Stephen Grider</p>
                 <p>3.0★ ★ ★ </p>
@@ -167,7 +167,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./d8.jpg" alt="image">
+                <img src="d8.jpg" alt="image">
                 <h3>Machine learning A-Z: AI, Python & R + ChatGPT Prize [2025]</h3>
                 <p>Kirill Eremenko</p>
                 <p>4.5★ ★ ★ ★ ★</p>
